--- a/src/app/layout.module.sass
+++ b/src/app/layout.module.sass
@@ -4,22 +4,20 @@
     top: 0
     left: 0
 
+    margin: 0
+
     width: 100vw
-    height: 100vh
 
     user-select: none
 
-    overflow: hidden
-
     font-family: 'Roboto', sans-serif
-
+    background-color: #e8e8e8
 
 .parent
     display: flex
     flex-direction: column
     background-color: #e8e8e8
     height: 100vh
-
 
 .header
     flex-shrink: 0
@@ -30,5 +28,3 @@
 
 .content
     padding-top: 10px
-    overflow: hidden
-    height: 100vh
