some styling changes

--- a/src/components/ShopItemComponent.module.sass
+++ b/src/components/ShopItemComponent.module.sass
@@ -6,7 +6,7 @@
     transition-duration: 150ms
 
     &:hover
-        transform: scale(1.05)
+        transform: scale(1.02)
     
     position: relative
 
@@ -26,9 +26,10 @@
         align-items: center
         transition-duration: 200ms
         transition-property: transform
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px
 
         &:hover
-            transform: scale(1.15)
+            transform: scale(1.1)
 .parent:hover .action
     display: inline
     opacity: 1
