--- a/src/app/layout.module.sass
+++ b/src/app/layout.module.sass
@@ -9,7 +9,7 @@
     width: 100vw
 
     user-select: none
-
+    overflow-x: hidden
     font-family: 'Roboto', sans-serif
     background-color: #e8e8e8
 
