--- a/src/app/shop/page.module.sass
+++ b/src/app/shop/page.module.sass
@@ -1,5 +1,4 @@
 .parent
-    padding: 15px
     max-height: 100%
     overflow: auto
 
@@ -7,8 +6,15 @@
     display: flex
 
     row-gap: 100px
+
     column-gap: 50px
 
     flex-wrap: wrap
 
     padding-bottom: 100px
+.shopWrapper
+    padding: 50px
+    display: flex
+    justify-content: center
+    align-content: center
+    align-items: center
