--- a/src/app/cart/page.module.sass
+++ b/src/app/cart/page.module.sass
@@ -1,8 +1,8 @@
 .parent
     display: flex
     flex-direction: row
-    max-height: 100vh
-    height: 100%
+    height: calc(100vh - 125px)
+    overflow: hidden
 
 .sidebar
     height: 100vh
